--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,3 +31,19 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+        
+    - name: HTML Preview
+      id: html_preview_ios
+      uses: pavi2410/html-preview-action@v2
+      with:
+        html_file: 'Report.html' 
+
+    - name: Print HTML Link
+      run: |
+        echo '${{ steps.html_preview_ios.outputs.url }}'
+        
+    - name: Publish Test Results - iOS
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      if: always()
+      with:
+        junit_files: "*.xml"
