--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,8 +48,12 @@ jobs:
       with:
         junit_files: "results/latest/*.xml"
 
-        
-        
+    - name: GH Pages Push
+      uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
+      with:
+        test_results: results/latest
+        keep_reports: 20
+
 
     - name: Deploy report to Github Pages
       if: always()
