--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,25 +32,52 @@ jobs:
       run: |
         python runner.py --set smoke_test
         
-    - name: HTML Preview
-      id: html_preview_ios
-      uses: pavi2410/html-preview-action@v2
-      with:
-        html_file: 'results/latest/report.html' 
-
-    - name: Print HTML Link
-      run: |
-        echo '${{ steps.html_preview_ios.outputs.url }}'
-        
-    - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v2
+    - name: Get test results history
+      uses: actions/checkout@v3
       if: always()
+      continue-on-error: true
       with:
-        junit_files: "results/latest/report.xml"
-
-    - name: GH Pages Push
-      uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
+        ref: gh-pages
+        path: gh-pages
+        
+    - name: Test local action
+      uses: ./html-reporter-github-pages@main
+      if: always()
+      id: test-results
       with:
         test_results: results/latest
-        keep_reports: 20
+        gh_pages: gh-pages
+        results_history: results-history
+        
+    - name: Publish Github Pages
+      if: ${{ always() }}
+      uses: peaceiris/actions-gh-pages@v3.8.0
+      with:
+        github_token: ${{ secrets.ASSI_TOKEN_GITHUB }}
+        publish_branch: gh-pages
+        publish_dir: results-history
+        keep_files: true 
+        
+        
+    #- name: HTML Preview
+    #  id: html_preview_ios
+    #  uses: pavi2410/html-preview-action@v2
+    #  with:
+    #    html_file: 'results/latest/report.html' 
+
+    #- name: Print HTML Link
+    #  run: |
+    #    echo '${{ steps.html_preview_ios.outputs.url }}'
+    #    
+    #- name: Publish Test Results
+    #  uses: EnricoMi/publish-unit-test-result-action@v2
+    #  if: always()
+    #  with:
+    #    junit_files: "results/latest/report.xml"
+
+    #- name: GH Pages Push
+    #  uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
+    #  with:
+    #    test_results: results/latest
+    #    keep_reports: 20
 
