--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -58,6 +58,15 @@ jobs:
         publish_dir: results-history
         keep_files: true 
         
+    - name: Post the link to the report
+      if: always()
+      uses: Sibz/github-status-action@v1
+      with: 
+          authToken: ${{secrets.GITHUB_TOKEN}}
+          context: 'Test report'
+          state: 'success'
+          sha: ${{ github.event.pull_request.head.sha }}
+          target_url: PavanMudigonda.github.io/html-reporter-github-pages/${{ github.run_number }}
         
     #- name: HTML Preview
     #  id: html_preview_ios
