--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         python runner.py --set smoke_test
       
-    - name: Publish HTML report to testresults.marcusfelling.com
+    - name: Publish HTML report
       if: always() # We want this to always run, even if test fail prior to this step running
       uses: peaceiris/actions-gh-pages@v3.7.3
       with:
