--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Deploy HTML Report
       run: |
         git checkout -b gh-pages
-        cp -R path/to/report/. .
+        cp -R latest/index.html
         git add .
         git commit -m "Publish HTML Report"
         git push -f origin gh-pages
