--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -49,6 +49,8 @@ jobs:
         
     - name: Deploy HTML Report
       run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
         git checkout -b gh-pages
         cp -R latest/. .
         git add .
