--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,26 +37,26 @@ jobs:
         name: my-artifact
         path: latest/index.html
       
-    #- name: Publish HTML report
-    #  if: always() # We want this to always run, even if test fail prior to this step running
-    #  uses: peaceiris/actions-gh-pages@v3.7.3
-    #  with:
-    #    github_token: ${{ secrets.ASSI_TOKEN_GITHUB }}
-    #    publish_dir: latest # This is where index.html will be output
-    #    keep_files: true # Set this to true to make sure we don't wipe out the other content in GitHub Pages
-    #    user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
-    #    user_email: 'github-actions[bot]@users.noreply.github.com' # This will be the user email that gets stamped in the repo commit
+    - name: Publish HTML report
+      if: always() # We want this to always run, even if test fail prior to this step running
+      uses: peaceiris/actions-gh-pages@v3.7.3
+      with:
+        github_token: ${{ secrets.ASSI_TOKEN_GITHUB }}
+        publish_dir: latest # This is where index.html will be output
+        keep_files: true # Set this to true to make sure we don't wipe out the other content in GitHub Pages
+        user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
+        user_email: 'github-actions[bot]@users.noreply.github.com' # This will be the user email that gets stamped in the repo commit
         
-    - name: Deploy HTML Report
-      run: |
-        git config --local user.email "Assi.Ivomir@gmail.com"
-        git config --local user.name "AssiNET-Action"
-        git checkout -b gh-pages
-        cp -R latest/. .
-        git add .
-        git commit -m "Publish HTML Report"
-        git push -f origin gh-pages
-        git push -f https://${{ secrets.ASSI_TOKEN_GITHUB }}@github.com/AssiNET/rest-api-tests-action.git gh-pages
+    #- name: Deploy HTML Report
+    #  run: |
+    #    git config --local user.email "Assi.Ivomir@gmail.com"
+    #    git config --local user.name "AssiNET-Action"
+    #    git checkout -b gh-pages
+    #    cp -R latest/. .
+    #    git add .
+    #    git commit -m "Publish HTML Report"
+    #    git push -f origin gh-pages
+    #    git push -f https://${{ secrets.ASSI_TOKEN_GITHUB }}@github.com/AssiNET/rest-api-tests-action.git gh-pages
          
         
     #- name: HTML Preview
