--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -49,6 +49,12 @@ jobs:
         user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
         user_email: 'github-actions[bot]@users.noreply.github.com' # This will be the user email that gets stamped in the repo commit
         
+    - name: Test Summary
+      uses: test-summary/action@v2
+      with:
+        paths: "latest/*.xml"
+      if: always()
+        
     #- name: Deploy HTML Report
     #  run: |
     #    git config --local user.email "Assi.Ivomir@gmail.com"
