--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -58,7 +58,7 @@ jobs:
           context: 'Test report'
           state: 'success'
           sha: ${{ github.event.pull_request.head.sha }}
-          target_url: PavanMudigonda.github.io/html-reporter-github-pages/${{ github.run_number }}
+          target_url: https://assinet.github.io/rest-api-tests-action/${{ github.run_number }}
 
     - name: Test Summary
       uses: test-summary/action@v2
