--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,19 +47,10 @@ jobs:
         publish_dir: ./latest # This is where index.html will be output
         force_orphan: true
         keep_files: true # Set this to true to make sure we don't wipe out the other content in GitHub Pages
+        keep_reports: 20
         user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
         user_email: 'github-actions[bot]@users.noreply.github.com' # This will be the user email that gets stamped in the repo commit
         report_url: https://assinet.github.io/rest-api-tests-action
-        
-    - name: Post the link to the report
-      if: always()
-      uses: Sibz/github-status-action@v1
-      with: 
-          authToken: ${{secrets.ASSI_TOKEN_GITHUB}}
-          context: 'Test report'
-          state: 'success'
-          sha: ${{ github.event.pull_request.head.sha }}
-          target_url: https://assinet.github.io/rest-api-tests-action/${{ github.run_number }}
 
     - name: Test Summary
       uses: test-summary/action@v2
