--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,33 +37,62 @@ jobs:
       with:
         name: my-artifact
         path: latest/index.html
-      
-    - name: Publish HTML report
-      if: always() # We want this to always run, even if test fail prior to this step running
-      uses: peaceiris/actions-gh-pages@v3.7.3
+        
+        
+    - name: Get test results history
+      uses: actions/checkout@v3
+      if: always()
+      continue-on-error: true
+      with:
+        ref: gh-pages
+        path: gh-pages
+        
+    - name: Test local action
+      uses: ./html-reporter-github-pages@main
+      if: always()
+      id: test-results
+      with:
+        test_results: latest
+        gh_pages: gh-pages
+        results_history: results-history
+        
+    - name: Publish Github Pages
+      if: ${{ always() }}
+      uses: peaceiris/actions-gh-pages@v3.8.0
       with:
         github_token: ${{ secrets.ASSI_TOKEN_GITHUB }}
         publish_branch: gh-pages
-        publish_dir: ./latest # This is where index.html will be output
-        force_orphan: true
-        keep_files: true # Set this to true to make sure we don't wipe out the other content in GitHub Pages
+        publish_dir: results-history
+        keep_files: true 
+        
+    - name: GH Pages Push
+      uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
+      with:
+        test_results: test-results
         keep_reports: 20
-        user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
-        user_email: 'github-actions[bot]@users.noreply.github.com' # This will be the user email that gets stamped in the repo commit
-        report_url: https://assinet.github.io/rest-api-tests-action
+      
+    #- name: Publish HTML report
+    #  if: always() # We want this to always run, even if test fail prior to this step running
+    #  uses: peaceiris/actions-gh-pages@v3.7.3
+    #  with:
+    #    github_token: ${{ secrets.ASSI_TOKEN_GITHUB }}
+    #    publish_branch: gh-pages
+    #    publish_dir: ./latest # This is where index.html will be output
+    #    force_orphan: true
+    #    keep_files: true # Set this to true to make sure we don't wipe out the other content in GitHub Pages
+    #    keep_reports: 20
+    #    user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
+    #    user_email: 'github-actions[bot]@users.noreply.github.com' # This will be the user email that gets stamped in the repo commit
+    #    report_url: https://assinet.github.io/rest-api-tests-action
 
-    - name: Test Summary
-      uses: test-summary/action@v2
-      with:
-        paths: "latest/*.xml"
-      if: always()
-        
-        
-    - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      if: always()
-      with:
-        junit_files: "latest/report.xml"
+    #- name: Test Summary
+    #  uses: test-summary/action@v2
+    #  with:
+    #    paths: "latest/*.xml"
+    #  if: always()
+    
+
+      
           
           
     #- name: Deploy HTML Report
@@ -94,9 +123,5 @@ jobs:
     #  with:
     #    junit_files: "results/latest/report.xml"
 
-    #- name: GH Pages Push
-    #  uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
-    #  with:
-    #    test_results: results/latest
-    #    keep_reports: 20
+
 
