--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,59 +37,30 @@ jobs:
       with:
         name: my-artifact
         path: latest/index.html
-        
-        
-    - name: Get test results history
-      uses: actions/checkout@v3
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
-        
-    - name: Test local action
-      uses: ./html-reporter-github-pages@main
-      if: always()
-      id: test-results
-      with:
-        test_results: latest
-        gh_pages: gh-pages
-        results_history: results-history
-        
-    - name: Publish Github Pages
-      if: ${{ always() }}
-      uses: peaceiris/actions-gh-pages@v3.8.0
+      
+    - name: Publish HTML report
+      if: always() # We want this to always run, even if test fail prior to this step running
+      uses: peaceiris/actions-gh-pages@v3.7.3
       with:
         github_token: ${{ secrets.ASSI_TOKEN_GITHUB }}
         publish_branch: gh-pages
-        publish_dir: results-history
-        keep_files: true 
-        
-    - name: GH Pages Push
-      uses: PavanMudigonda/html-reporter-github-pages/composite@v1.1
-      with:
-        test_results: test-results
+        publish_dir: ./latest # This is where index.html will be output
+        #force_orphan: true
+        keep_files: true # Set this to true to make sure we don't wipe out the other content in GitHub Pages
         keep_reports: 20
-      
-    #- name: Publish HTML report
-    #  if: always() # We want this to always run, even if test fail prior to this step running
-    #  uses: peaceiris/actions-gh-pages@v3.7.3
-    #  with:
-    #    github_token: ${{ secrets.ASSI_TOKEN_GITHUB }}
-    #    publish_branch: gh-pages
-    #    publish_dir: ./latest # This is where index.html will be output
-    #    force_orphan: true
-    #    keep_files: true # Set this to true to make sure we don't wipe out the other content in GitHub Pages
-    #    keep_reports: 20
-    #    user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
-    #    user_email: 'github-actions[bot]@users.noreply.github.com' # This will be the user email that gets stamped in the repo commit
-    #    report_url: https://assinet.github.io/rest-api-tests-action
+        user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
+        user_email: 'github-actions[bot]@users.noreply.github.com' # This will be the user email that gets stamped in the repo commit
+        report_url: https://assinet.github.io/rest-api-tests-action
+        
+    - name: HTML Report Link
+      run: |
+        echo 'https://assinet.github.io/rest-api-tests-action'
 
-    #- name: Test Summary
-    #  uses: test-summary/action@v2
-    #  with:
-    #    paths: "latest/*.xml"
-    #  if: always()
+    - name: Test Summary
+      uses: test-summary/action@v2
+      with:
+        paths: "latest/*.xml"
+      if: always()
     
 
       
