--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,7 +36,7 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: my-artifact
-        path: latest/index.html
+        path: results/latest/index.html
       
     - name: Publish HTML report
       if: always() # We want this to always run, even if test fail prior to this step running
@@ -44,7 +44,7 @@ jobs:
       with:
         github_token: ${{ secrets.ASSI_TOKEN_GITHUB }}
         publish_branch: gh-pages
-        publish_dir: ./latest # This is where index.html will be output
+        publish_dir: results/latest # This is where index.html will be output
         #force_orphan: true
         keep_files: true # Set this to true to make sure we don't wipe out the other content in GitHub Pages
         user_name: 'github-actions[bot]' # This will be the username that gets stamped in the repo commit
@@ -57,40 +57,6 @@ jobs:
     - name: Test Summary
       uses: test-summary/action@v2
       with:
-        paths: "latest/*.xml"
+        paths: "results/latest/*.xml"
       if: always()
-    
-
-      
-          
-          
-    #- name: Deploy HTML Report
-    #  run: |
-    #    git config --local user.email "Assi.Ivomir@gmail.com"
-    #    git config --local user.name "AssiNET-Action"
-    #    git checkout -b gh-pages
-    #    cp -R latest/. .
-    #    git add .
-    #    git commit -m "Publish HTML Report"
-    #    git push -f origin gh-pages
-    #    git push -f https://${{ secrets.ASSI_TOKEN_GITHUB }}@github.com/AssiNET/rest-api-tests-action.git gh-pages
-         
-        
-    #- name: HTML Preview
-    #  id: html_preview_ios
-    #  uses: pavi2410/html-preview-action@v2
-    #  with:
-    #    html_file: 'results/latest/report.html' 
-
-    #- name: Print HTML Link
-    #  run: |
-    #    echo '${{ steps.html_preview_ios.outputs.url }}'
-    #    
-    #- name: Publish Test Results
-    #  uses: EnricoMi/publish-unit-test-result-action@v2
-    #  if: always()
-    #  with:
-    #    junit_files: "results/latest/report.xml"
-
-
 
